# dbskiter

./: .coverage  .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AI集成指南.md  CHANGELOG.md  CLI使用指南.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  数据库Skill使用指南.md  数据库Skill自然语言使用指南.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.trae/rules/: sql_security_rules.md
.trae/skills/: README.md
configuration/: index.html
dbskiter/: __init__.py  __main__.py  cli.py  mcp_integration.py  py.typed
dbskiter/ai_rules/: readonly_system_prompt.md
dbskiter/cli/: __init__.py  banner.py  command_aliases.py  config.py  config_file.py  error_handler.py  exceptions.py  main.py  output.py  readonly_middleware.py  style.py  url_parser.py
dbskiter/config/: __init__.py  security_config.py
dbskiter/db_diagnose/: __init__.py  models.py  skill.py  utils.py
dbskiter/db_inspector/: __init__.py  intelligent_inspector.py  models.py  report_generator.py  skill.py  utils.py
dbskiter/db_lock_analyzer/: __init__.py  models.py  skill.py  utils.py
dbskiter/db_monitor/: __init__.py  advanced_predictor.py  capacity_predictor.py  health_scorer.py  models.py  skill.py  storage.py  trend_analyzer.py  utils.py
dbskiter/db_scheduler/: __init__.py  backup.py  connection_pool.py  dependency_manager.py  distributed_lock.py  models.py  monitoring.py  persistent_storage.py  result_cleanup.py  retry_handler.py  scheduler_engine.py  skill.py  task_executors.py  task_storage.py  utils.py
dbskiter/db_security/: __init__.py  advanced_security_analyzer.py  audit_log_analyzer.py  login_security_monitor.py  models.py  password_policy_checker.py  sensitive_data_scanner.py  sensitive_data_scanner_v2.py  skill.py  sql_injection_detector.py  sql_injection_detector_v2.py  (+1 more)
resources/: index.html
scripts/: check_bare_except.py  ci_test_runner.py  run_ci_tests.py
search/: search_index.json
tests/: test_sql_validator.py
(+158 files in other folders)
