[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbskiter"
dynamic = ["version", "readme"]
description = "数据库 Skills 集合 - 监控、诊断、安全、调度、SQL执行"
authors = [
    {name = "MagiCzc", email = "magiczc@139.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["database", "mysql", "oracle", "postgresql", "clickhouse", "sqlite", "dba", "aiops"]

dependencies = [
    "sqlalchemy>=2.0.0",
    "pymysql>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.21.0",
    "requests>=2.28.0",
    "jinja2>=3.0.0",
    "pydantic>=2.0.0",
    "sqlparse>=0.5.0",
    "rich>=13.0.0",
    "pyyaml>=5.0",
    "argcomplete>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0.0",
]
oracle = [
    "oracledb>=1.4.0",
    "JayDeBeApi>=1.2.0",
]
report = [
    "weasyprint>=59.0",
]

[project.scripts]
dbskiter = "dbskiter.cli.main:main"
dbcli = "dbskiter.cli.main:main"

[project.urls]
Homepage = "https://github.com/magicCzc/dbskiter"
Repository = "https://github.com/magicCzc/dbskiter.git"
Issues = "https://github.com/magicCzc/dbskiter/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dbskiter*"]

[tool.setuptools.dynamic]
version = {attr = "dbskiter.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}
